Add Update username and password
