# doc/swagger.yaml
@@ -558,6 +558,63 @@ paths:
       summary: Fetches the user feed
       tags:
       - feed
+  /users/change-password:
+    patch:
+      summary: Change authenticated user's password
+      description: Allows an authenticated user to change their password
+      tags:
+        - users
+      security:
+        - ApiKeyAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Password'
+      responses:
+        '200':
+          description: Password updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '400':
+          description: Bad request / invalid payload
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal server error
+    paths:
+  /users/update-username:
+    patch:
+      summary: Update authenticated user's username
+      description: Allows an authenticated user to change their username
+      tags:
+        - users
+      security:
+        - ApiKeyAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateUsername'
+      responses:
+        '200':
+          description: User updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '400':
+          description: Bad request / invalid payload
+        '401':
+          description: Unauthorized
+        '409':
+          description: Username already exists
+        '500':
+          description: Internal server error
 securityDefinitions:
   ApiKeyAuth:
     in: header
